0.02
 - Fix repository link in doc.

0.01 2023-10-27T17:21:39+02:00
 - First version.