@@ -1,4 +1,5 @@
 0.02
+ - Add 'deprecated' parameter to handle deprecated values in query.
  - Fix repository link in doc.
 
 0.01 2023-10-27T17:21:39+02:00
